Collection API Улучшения[#195288]